@@ -3,12 +3,12 @@
  * @package Include/help/ja
  */
 ?>
-<h1>複数回連続設定</h1>
+<h1>連続抑制回数</h1>
 
 <br>
 <br>
 
-複数回連続設定は、状態変化を繰り返すようなデータを扱う場合に利用します。
+連続抑制回数は、状態変化を繰り返すようなデータを扱う場合に利用します。
 これを設定することにより、Pandora FMS にオリジナルの状態から連続何回データが変化した状態にあるかの判断をさせることができます。
 <br><br>
 例えば、あるホストへの ping でパケットロスがあったとします。
@@ -28,7 +28,7 @@
 <br>
 しかしながら、ホストは正常稼働中だとすると、複数回連続 NG であった場合のみ障害状態であると認識して欲しい場合があります。
 つまり、上記は障害状態とみなさないという判断です。
-たとえば、複数回連続設定を 3 に設定すると、次のような場合、
+たとえば、連続抑制回数を 3 に設定すると、次のような場合、
 <pre>
  1  
  1  
@@ -41,5 +41,5 @@
 <br>
 次回さらに 0 が続いた時点でノードダウンと認識します。(0 が 3回まではOK、4回目でNG)
 <br>
-このように、複数回連続設定を行うことにより 1 回のみの変化では障害とみなさない設定を実現できます。
+このように、連続抑制回数の設定を行うことにより 1 回のみの変化では障害とみなさない設定を実現できます。
 この機能は、すべてのモジュールにおいて実装されています。
