@@ -1,5 +1,10 @@
 2011-12-16  Junichi Satoh  <junichi@rworks.jp>
 
+	* include/help/ja/help_ff_threshold.php: Fixed Japanese word
+	translations.
+
+2011-12-16  Junichi Satoh  <junichi@rworks.jp>
+
 	* godmode/agentes/module_manager.php: Merged from trunk. Fixed wrong
 	pagination links after updating modules.
 
